--- a/EmployeeBlazor/wwwroot/index.html
+++ b/EmployeeBlazor/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>EmployeeBlazor</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css" rel="stylesheet" />
+    <link href="css/bulma/bulma.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="EmployeeBlazor.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
